--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="ico" href="/src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Néstor Acerbo - Front End Developer</title>
+    <title>Néstor Acerbo - COBOL developer</title>
   </head>
   <body>
     <div id="root"></div>
